Initial commit: HelloRun authentication system with email verification

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 # Dependencies
 node_modules/
+package-lock.json
 
-# Environment variables (CRITICAL - contains RESEND_API_KEY)
+# Environment variables
 .env
 .env.local
 .env.production
 .env.development
 
 # Logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -20,12 +22,19 @@ Thumbs.db
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
 
-# Build outputs
+# Build files
 dist/
 build/
-coverage/
 
-# Database
-*.sqlite
-*.db
+# Uploads
+uploads/
+public/uploads/
+
+# Session store
+sessions/
+
+# Coverage
+coverage/
