Phase 2A: Add organizer application foundation
- Added OrganiserApplication model with auto-increment applicationId
- Created upload.service.js for document uploads (multer)
- Added organizer.routes.js with complete-profile and application-status
- Updated User model with organizerApplicationId and organizerStatus fields
- Added user methods: canApplyAsOrganizer, hasActiveApplication, isApprovedOrganizer
- Created organizer views (complete-profile, application-status)
- Updated authRoutes.js with role-aware email verification flow
- Added verify-email-sent.ejs and verify-email-result.ejs
- Updated auth.middleware.js with requireOrganizer and requireApprovedOrganizer
- Added environment variables for uploads (UPLOAD_MAX_SIZE, UPLOAD_ALLOWED_TYPES)
- Created uploads/organizer-docs directory for document storage
- Updated wireframe.txt and dir.text with Phase 2 progress
- Both /signup and /register POST routes now work
- Organizers redirect to complete-profile after email verification
- Runners redirect to home after email verification
- Dual-role capability: organizers can also participate as runners

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,8 @@ dist/
 build/
 
 # Uploads
-uploads/
-public/uploads/
+public/uploads/organizer-docs/*
+!public/uploads/organizer-docs/.gitkeep
 
 # Session store
 sessions/
