feat: Implement organizer application system (Feb 5, 2026)
Complete implementation of organizer application workflow:
- Profile completion form with file uploads
- Application status tracking
- Email notifications
- Upload directory structure

13 new files, 6 updated files

--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
   "name": "hellorun",
   "version": "1.0.0",
-  "description": "Virtual running event platform",
+  "description": "Running event management platform",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "init-counters": "node src/scripts/initCounter.js",
-    "test-db": "node src/scripts/testConnection.js",
-    "migrate-userids": "node src/scripts/migrateUserIds.js"
+    "setup": "node src/scripts/setup-uploads.js",
+    "postinstall": "npm run setup",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "running",
     "events",
-    "virtual"
+    "race",
+    "marathon"
   ],
-  "author": "",
+  "author": "helloRun Team",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "csurf": "^1.11.0",
-    "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "express-rate-limit": "^8.2.1",
-    "express-session": "^1.17.3",
-    "mongoose": "^8.0.3",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^7.0.12",
-    "resend": "^6.8.0"
+    "resend": "^3.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.0"
   }
 }
