--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,52 @@
 # Dependencies
 node_modules/
-package-lock.json
-
-# Environment variables
-.env
-.env.local
-.env.production
-.env.development
-
-# Logs
-logs/
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS files
-.DS_Store
-Thumbs.db
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
-# Build files
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Uploads (keep directory structure but ignore files)
+src/public/uploads/*
+!src/public/uploads/.gitkeep
+!src/public/uploads/organizer-docs/
+src/public/uploads/organizer-docs/*
+!src/public/uploads/organizer-docs/.gitkeep
+!src/public/uploads/event-images/
+src/public/uploads/event-images/*
+!src/public/uploads/event-images/.gitkeep
+!src/public/uploads/profile-photos/
+src/public/uploads/profile-photos/*
+!src/public/uploads/profile-photos/.gitkeep
+
+# Build
 dist/
 build/
 
-# Uploads (keep folder structure but ignore uploaded files)
-public/uploads/organizer-docs/*
-!public/uploads/organizer-docs/.gitkeep
-
-# Session store
-sessions/
-
-# Coverage
+# Testing
 coverage/
+.nyc_output/
+
+# Temporary files
+tmp/
+temp/
